--- a/src/index.html
+++ b/src/index.html
@@ -12,20 +12,23 @@
 	================================================== -->
 
 	<!-- Bootstrap -->
+	<link rel="stylesheet" href="assets/css/bootstrap-grid.css">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<!-- Template styles-->
-	<link rel="stylesheet" href="assets/css/style.css">
-	<!-- Responsive styles-->
-	<link rel="stylesheet" href="assets/css/responsive.css">
+
 	<!-- FontAwesome -->
 	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 	<!-- Animation -->
+	<link rel="stylesheet" href="assets/css/icofont/icofont.min.css">
 	<link rel="stylesheet" href="assets/css/animate.css">
 	<!-- Owl Carousel -->
 	<link rel="stylesheet" href="assets/css/owl.carousel.min.css">
 	<link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
 	<!-- Colorbox -->
 	<link rel="stylesheet" href="assets/css/colorbox.css">
+		<!-- Template styles-->
+		<link rel="stylesheet" href="assets/css/style.css">
+		<!-- Responsive styles-->
+		<link rel="stylesheet" href="assets/css/responsive.css">
 </head>
 <body>
   <app-root></app-root>
